trying to fix text out of place

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@
     }
 }
 
+#headerText2 {
+    font-kerning: none;
+}
+
 .center {
     @apply grid place-content-center
 }
